--- a/index.html
+++ b/index.html
@@ -15,8 +15,9 @@
 
 
 <script>
-const allTags = document.querySelectorAll('*');
-console.log(allTags);
+const wholeHtmlCode = document.documentElement.outerHTML;
+
+console.log(wholeHtmlCode);
 
 </script>
 
