restrict function to the body

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 
 
 <script>
-const wholeHtmlCode = document.documentElement.outerHTML;
+const wholeHtmlCode = document.body.outerHTML;
 const stripHTMLTags = str => str.replace(/<[^>]*>/g, '');
 const getPlainText = stripHTMLTags(wholeHtmlCode);
     
