--- a/index.html
+++ b/index.html
@@ -4,16 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-
-    
-<script defer>
-const wholeHtmlCode = document.body.outerHTML;
-const stripHTMLTags = str => str.replace(/<[^>]*>/g, '');
-const getPlainText = stripHTMLTags(wholeHtmlCode);
-    
-console.log(getPlainText);
-
-</script>
+    <script src="script.js" defer></script>
 </head>
 <body>
     <div>Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua.</div>
