--- a/index.html
+++ b/index.html
@@ -4,7 +4,6 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <script src="script.js" defer></script>
 </head>
 <body>
     <div>Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua.</div>
@@ -12,6 +11,19 @@
 <p>Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua.</p>
 <div>Test123</div>
 <div>Noch einer</div>
+
+<script defer>
+
+    <!-- select DOM-Tree without head, after that removing script -->
+    let wholeHtmlCodeWithScript = document.body.outerHTML;
+    const wholeHtmlCodeWithoutScript = bodyHtmlCode.replace(/<script[^>]*>([\s\S]*?)<\/script>/gi, '');
+    <!-- removing HTML-Tags -->
+    const stripHTMLTags = str => str.replace(/<[^>]*>/g, '');
+    const getPlainText = stripHTMLTags(wholeHtmlCodeWithoutScript);    
+    console.log(getPlainText);
+        
+</script>
+
 
 
 </body>
