--- a/index.html
+++ b/index.html
@@ -19,7 +19,11 @@
     let wholeHtmlCodeWithScript = document.body.outerHTML;
     const wholeHtmlCodeWithoutScript = wholeHtmlCodeWithScript.replace(/<script[^>]*>([\s\S]*?)<\/script>/gi, '');
     const stripHTMLTags = str => str.replace(/<[^>]*>/g, '');
-    const getPlainText = stripHTMLTags(wholeHtmlCodeWithoutScript);    
+    const getPlainText = stripHTMLTags(wholeHtmlCodeWithoutScript);
+    console.log(wholeHtmlCodeWithoutScript);
+
+    console.log(getPlainText);
+
     };
         
     removeTags();
