--- a/index.html
+++ b/index.html
@@ -23,9 +23,9 @@
     return getPlainText;
 
     };
-        
-    removeTags();
-    console.log(getPlainText);
+
+    const plainText = removeTags();
+    console.log(plainText);
         
 </script>
 
