--- a/index.html
+++ b/index.html
@@ -20,13 +20,13 @@
 </style>
 <script>
     
-    function removeTagsFromBox(text) {
-        const wholeHtmlCodeWithoutScript = text.replace(/<script[^>]*>([\s\S]*?)<\/script>/gi, '');
-        const wholeHtmlCodeWithoutStyleAndScript = wholeHtmlCodeWithoutScript.replace(/<style[^>]*>([\\s\\S]*?)<\\/style>/gi, '');
-        const stripHTMLTags = str => str.replace(/<[^>]*>/g, '');
-        const getPlainTextBox = stripHTMLTags(wholeHtmlCodeWithoutStyleAndScript);
-        return getPlainTextBox;
-    };
+function removeTagsFromBox(text) {
+    const wholeHtmlCodeWithoutScript = text.replace(/<script[^>]*>([\s\S]*?)<\/script>/gi, '');
+    const wholeHtmlCodeWithoutStyleAndScript = wholeHtmlCodeWithoutScript.replace(/<style[^>]*>([\s\S]*?)<\/style>/gi, '');
+    const stripHTMLTags = str => str.replace(/<\/?[^>]+(>|$)/g, '');
+    const getPlainTextBox = stripHTMLTags(wholeHtmlCodeWithoutStyleAndScript);
+    return getPlainTextBox;
+}
 
     const getPlainTextBox = removeTagsFromBox();
     console.log(getPlainTextBox);
